Save data new traceability to path string userID firebase realtime

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">LoginAndSignUpFirebase</string>
+
+    <style name="toastCustom">
+        <item name="stColorBackground">@color/grey_mid</item>
+        <item name="stTextColor">@color/white</item>
+    </style>
 </resources>
