Generate and Scan QR Code feature successfully added to application ShobisApp. But don't have override data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LoginAndSignUpFirebase</string>
+    <string name="app_name">ShobisApp</string>
 
     <style name="toastCustom">
         <item name="stColorBackground">@color/grey_mid</item>
