--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -80,4 +80,10 @@
     <string name="outgoing_product_weight">Bobot Produk Keluar:</string>
     <string name="process_weight_loss_sub_tittle">Susut Bobot Proses:</string>
     <string name="product_outgoing_date_sub_tittle">Tanggal Bobot Keluar:</string>
+    <string name="product_code_sub_tittle">Kode Produk:</string>
+    <string name="hello_blank_fragment">Hai Fragment Kosong</string>
+    <string name="your_traceability_uploads_will_appear_here">Data upload ketertelusuran akan ditampilkan di sini</string>
+    <string name="your_traceability_scan_will_be_displayed_here">Hasil scan ketertelusuran akan ditampilkan di sini</string>
+    <string name="gram">gram</string>
+    <string name="weight_data">Data B</string>
 </resources>
