--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="your_traceability_uploads_will_appear_here">Your traceability uploads will appear here</string>
     <string name="your_traceability_scan_will_be_displayed_here">Your Traceability Scan will be displayed here</string>
+    <string name="gram">gram</string>
+    <string name="weight_data">W data</string>
 </resources>
