--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,13 @@
     <string name="your_traceability_scan_will_be_displayed_here">Your Traceability Scan will be displayed here</string>
     <string name="gram">gram</string>
     <string name="weight_data">W data</string>
+    <string name="email_address_sub_title">Email Address:</string>
+    <string name="creator_name">Creator Name:</string>
+    <string name="gender_sub_title">Gender:</string>
+    <string name="address_sub_title">Address:</string>
+    <string name="type_of_venture">Type of Venture</string>
+    <string name="the_name_of_company">The Name of Company</string>
+    <string name="user">User</string>
+    <string name="company">Company</string>
+    <string name="your_company">Your Company</string>
 </resources>
