showed data creator, actor, email, company, address in primary data (Upload Tab Traceability) when create NewTraceabilityActivity.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,7 @@
     <string name="user">User</string>
     <string name="company">Company</string>
     <string name="your_company">Your Company</string>
+    <string name="actor_sub_title">Actor:</string>
+    <string name="creator_information">Creator Information</string>
+    <string name="company_sub_title">Company:</string>
 </resources>
