Added validatedInputData in AddTraceabilityActivity.kt, and fix the AlertDialog (progress Loading) with onDestroy Func

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -19,17 +19,29 @@
     <string name="your_address">Alamat Anda</string>
     <string name="sign_out">Keluar Akun</string>
     <string name="add_traceability_data">Tambah Data Ketertelusuran</string>
-    <string name="product_information">Informasi Produk :</string>
+    <string name="update_product_information">Memperbarui Informasi Produk :</string>
     <string name="product_arrived_date">Tanggal Produk Tiba</string>
-    <string name="product_weight_upon_arrival_gram">Berat Produk Saat Tiba (gram)</string>
+    <string name="email_address_sub_title">Email:</string>
+    <string name="creator_name">Nama Pembuat:</string>
+    <string name="gender_sub_title">Jenis Kelamin:</string>
+    <string name="address_sub_title">Alamat:</string>
+    <string name="type_of_venture">Jenis Usaha:</string>
+    <string name="the_name_of_company">Nama Perusahaan:</string>
+    <string name="user">Pengguna</string>
+    <string name="company">Perusahaan</string>
+    <string name="your_company">Nama Perusahaan Anda</string>
+    <string name="actor_sub_title">Aktor:</string>
+    <string name="creator_information">Informasi Pembuat:</string>
+    <string name="company_sub_title">Perusahaan:</string>
+    <string name="product_weight_upon_arrival_kilogram">Berat Produk Saat Tiba (Kg)</string>
     <string name="grade">Kelas :</string>
     <string name="price_per_kg">Harga (per Kg)</string>
-    <string name="outgoing_product_weight_gram">Bobot Produk Keluar (gram)</string>
-    <string name="process_weight_loss_gram">Susut Bobot Proses (gram)</string>
+    <string name="outgoing_product_weight_kilogram">Bobot Produk Keluar (Kg)</string>
+    <string name="process_weight_loss_kilogram">Susut Bobot Proses (Kg)</string>
     <string name="product_outgoing_date">Tanggal Produk Keluar</string>
     <string name="grade_title">Kelas</string>
     <string name="product_detail">Detail Produk</string>
-    <string name="product_information_tittle">Informasi Produk</string>
+    <string name="update_product_information_tittle">Memperbarui Informasi Produk</string>
     <string name="shallot_variety">Jenis Bawang:</string>
     <string name="weight">Bobot:</string>
     <string name="grade_sub_tittle">Kelas:</string>
@@ -47,7 +59,7 @@
     <string name="your_data_in_here">Data anda di sini!</string>
     <string name="create_new_traceability">Membuat Ketertelusuran Baru</string>
     <string name="shallot_variety_ET">Jenis Bawang Merah</string>
-    <string name="product_weight_gram">Bobot Produk (gram)</string>
+    <string name="product_weight_kilogram">Bobot Produk (Kg)</string>
     <string name="shallot_plating_information_sub_tittle">Informasi Penanaman Bawang Merah</string>
     <string name="farmer_name_ET">Nama Petani</string>
     <string name="harvest_time_day_ET">Waktu Panen (hari)</string>
@@ -84,6 +96,6 @@
     <string name="hello_blank_fragment">Hai Fragment Kosong</string>
     <string name="your_traceability_uploads_will_appear_here">Data upload ketertelusuran akan ditampilkan di sini</string>
     <string name="your_traceability_scan_will_be_displayed_here">Hasil scan ketertelusuran akan ditampilkan di sini</string>
-    <string name="gram">gram</string>
+    <string name="kilogram">Kg</string>
     <string name="weight_data">Data B</string>
 </resources>
