Finishing app : added level user "UMKM" in ProfileEditActivity.kt and added checkActor in HomeActivity.kt, UploadFragment.kt, DetailRecentActivity.kt

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -98,4 +98,5 @@
     <string name="your_traceability_scan_will_be_displayed_here">Hasil scan ketertelusuran akan ditampilkan di sini</string>
     <string name="kilogram">Kg</string>
     <string name="weight_data">Data B</string>
+    <string name="product_information">Informasi Produk</string>
 </resources>
