--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -63,7 +63,7 @@
     <string name="shallot_plating_information_sub_tittle">Informasi Penanaman Bawang Merah</string>
     <string name="farmer_name_ET">Nama Petani</string>
     <string name="harvest_time_day_ET">Waktu Panen (hari)</string>
-    <string name="planting_area_ET">Daerah Penanaman</string>
+    <string name="planting_location_ET">Daerah Penanaman</string>
     <string name="the_type_of_fertilizer_used">Tipe Pupuk yang Digunakan</string>
     <string name="type_of_pesticides_used">Tipe Pestisida yang Digunakan</string>
     <string name="notes_ET">Catatan</string>
