Revision: 1. Input data dibuat list opsi pilihan untuk fertilizer, agar pilihan dapat lebih tertutup dan tidak terlalu luas

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -65,7 +65,7 @@
     <string name="harvest_time_day_ET">Waktu Panen (hari)</string>
     <string name="planting_location_ET">Daerah Penanaman</string>
     <string name="the_type_of_fertilizer_used">Tipe Pupuk yang Digunakan</string>
-    <string name="type_of_pesticides_used">Tipe Pestisida yang Digunakan</string>
+    <string name="the_type_of_pesticides_used">Tipe Pestisida yang Digunakan</string>
     <string name="notes_ET">Catatan</string>
     <string name="create_traceability">Buat Ketertelusuran Baru</string>
     <string name="create_new_traceability_ET">Buat Ketertelusuran Baru</string>
