Revision: 4. Membuat recyclerView untuk menampilkan tampilan summary pada menu Summary dalam bentuk tabel. Tabel dibuat menggunakan TableLayout dan Table Row. Berhasil menampilkan data yang ada di dalam path "summary" pada firebase ke Aplikasi Shobis. to be continued...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,5 @@
     <string name="total_capital">Total Capital</string>
     <string name="total_sell">Total Sell</string>
     <string name="profit">Profit</string>
+    <string name="incoming_weight_kg">Incoming Weight (Kg)</string>
 </resources>
