--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,14 +119,16 @@
     <string name="product_id">Product ID</string>
     <string name="outgoing_date">Outgoing Date</string>
     <string name="arrival_date">Arrival Date</string>
-    <string name="incoming_weight">Incoming Weight</string>
+    <string name="incoming_weight">Incoming Weight (per Kg)</string>
     <string name="purchase_price_per_kg">Purchase Price (per Kg)</string>
-    <string name="cost_prices_handling_packing_transport_kg">Cost Prices (Handling, Packing, Transport) / Kg</string>
-    <string name="outgoing_weight_per_kg">Outgoing Weight (per Kg)</string>
+    <string name="outgoing_weight_kg">Outgoing Weight (Kg)</string>
     <string name="purchase_capital">Purchase Capital</string>
-    <string name="capital_cost">Capital Cost</string>
+    <string name="capital">Capital</string>
     <string name="total_capital">Total Capital</string>
-    <string name="total_sell">Total Sell</string>
     <string name="profit">Profit</string>
     <string name="incoming_weight_kg">Incoming Weight (Kg)</string>
+    <string name="total_income">Total Income</string>
+    <string name="total_profit">Total Profit</string>
+    <string name="total_handling_fee">Total Handling Fee</string>
+    <string name="income">Income</string>
 </resources>
