Menambah pararel input summary, saat produk yang ingin dikirim hanya sebagian / dipecah ke beberapa tempat. Menambahkan autocompleteText Distribution, menambah resultDistribution. Hasil akan berbeda jika produk dikirim secara seri atau tidak dipecah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,6 @@
     <string name="total_profit">Total Profit</string>
     <string name="total_handling_fee">Total Handling Fee</string>
     <string name="income">Income</string>
+    <string name="product_information_sub_title">Product Information:</string>
+    <string name="distribution">Distribution</string>
 </resources>
